# auglag-toolbox

./: .gitignore  MATH.md  README.md  pyproject.toml
auglag_toolbox/: __init__.py  batched.py  core.py  kkt.py  penalty.py  types.py
docs/: README.md  tutorial-1-install.md  tutorial-2-inequality.md  tutorial-3-coupled.md  tutorial-4-penalty-vs-alm.md  tutorial-5-reproduce.md
examples/: README.md  check_cuda.py  node_power_constraint.py  visual_abstract.py
tests/: README.md  _helpers.py  conftest.py  test_alm_coupled_covariance.py  test_alm_equality.py  test_alm_inequality.py  test_batched_multistart.py  test_complex_wirtinger.py  test_convergence_reporting.py  test_kkt_and_conventions.py  test_multistart_and_descent.py  test_penalty_vs_alm.py  test_pluggable_inner.py  test_slsqp_reference.py
