[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auglag-toolbox"
version = "0.2.0"
description = "Augmented-Lagrangian / penalty constraint handling on top of a first-order projected solver (pga-toolbox), for complex (Wirtinger) and real parameters."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Tadashi Wadayama", email = "wadayama@nitech.ac.jp" },
]
keywords = [
    "augmented-lagrangian",
    "constrained-optimization",
    "kkt",
    "wirtinger",
    "complex-optimization",
    "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "torch>=2.0",
    "pga-toolbox @ git+https://github.com/wadayama/pga-toolbox",
]

[project.optional-dependencies]
test = [
    "numpy>=2",
    "pytest>=7",
    "scipy>=1.13",
]
examples = [
    "numpy>=2",
    "matplotlib>=3.10",
]

[tool.hatch.build.targets.wheel]
packages = ["auglag_toolbox"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
